Get rid of extra padding in desktop Webkit, fixes #51

--- a/bin/css/nanoscroller.css
+++ b/bin/css/nanoscroller.css
@@ -15,7 +15,7 @@
   left          : 0;
 }
 .nano .content::-webkit-scrollbar {
-  -webkit-appearance: none;
+  visibility: hidden;
 }
 .nano > .pane {
   background : rgba(0,0,0,.25);
